# kinect-server

./: README.md
src/: paths.py  run_kinect_planes.py  run_skeleton_viewer.py
src/KinectPlanes/: client.py  consts.py  qt4reactor.py
src/KinectPlanes/gui/: compile_ui.bat  main.py  main_window.py
src/KinectPlanes/images/: altitude.pdn  coin.pdn  frame.pdn  navrh.pdn  plane_concept.pdn  score.pdn  skeleton.pdn
src/KinectPlanes/images/plane/: planes_all.pdn
src/KinectPlanes/modules/: comm.py  projection.py  sprites.py
src/KinectServer/: CMakeLists.txt  KinectServer.txt  kinect_server.cpp
src/PySkeletonViewer/: client.py  consts.py
src/PySkeletonViewer/gui/: main.ui  main_window.py
src/PySkeletonViewer/images/: skeleton.pdn
src/PySkeletonViewer/modules/: comm.py  projection.py  sprites.py
src/web_client/: index.html
